--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@testing-library/user-event": "^13.2.1",
     "firebase": "^9.6.1",
     "flexbox-react": "^4.4.0",
+    "jsoneditor": "^9.5.11",
+    "jsoneditor-react": "^3.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
